--- a/singolo1.css
+++ b/singolo1.css
@@ -1,10 +1,104 @@
+@import "fonts.css";
+
+:root {
+  --header-background: #2d303a;
+  --header-border: #323746;
+  --slider-background: #f06c64;
+  font-size: 1em;
+}
+
 body {
   box-sizing: border-box;
   background-color: gainsboro;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.4;
 }
 
 *,
 *::after,
 *::before {
   box-sizing: inherit;
+}
+
+header {
+  background-color: var(--header-background);
+  border-bottom: 6px solid var(--header-border);
+}
+
+.wrapper-header {
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 2em 2.5em 2em 2.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.logo-header {
+  margin: 0;
+  padding: 0;
+}
+
+.logo-header > a {
+  position: relative;
+  display: block;
+  font-size: 1.5625rem;
+  line-height: 1;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+}
+
+.logo-header > a::after {
+  content: "*";
+  position: absolute;
+  top: -1px;
+  left: 100%;
+  color: var(--slider-background);
+}
+
+.logo-header > a:hover {
+  color: var(--slider-background);
+}
+
+.navbar-header {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  justify-content: space-between;
+}
+
+.navbar-header__item + .navbar-header__item {
+  position: relative;
+  margin-left: 1.875em;  
+}
+
+.navbar-header__item + .navbar-header__item::before {
+  content: "";
+  position: absolute;
+  left: -1em;
+  top: 50%;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: #494e62;
+}
+
+.navbar-header__item > a {
+  display: block;
+  font-size: 0.75rem;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: -0.027em;
+}
+
+.navbar-header__item > a:hover {
+  color: var(--slider-background);
 }
