--- a/singolo1.css
+++ b/singolo1.css
@@ -3,7 +3,16 @@
 :root {
   --header-background: #2d303a;
   --header-border: #323746;
+  --header-text-color: #fff;
   --slider-background: #f06c64;
+  --slider-border: #ea676b;
+  --services-background: #f2f2f2;
+  --services-border: #fff;
+  --services-title-color: #666d89;
+  --services-text-color: #767e9e;
+
+  --content-width: 1020px;
+  
   font-size: 1em;
 }
 
@@ -22,23 +31,25 @@ body {
   box-sizing: inherit;
 }
 
-header {
+h1, h2, h3, h4 {
+  margin: 0;
+  padding: 0;
+}
+
+/*- header --------------------------------------- */
+
+.header {
   background-color: var(--header-background);
   border-bottom: 6px solid var(--header-border);
 }
 
 .wrapper-header {
-  max-width: 1020px;
+  max-width: var(--content-width);
   margin: 0 auto;
   padding: 2em 2.5em 2em 2.5em;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-}
-
-.logo-header {
-  margin: 0;
-  padding: 0;
 }
 
 .logo-header > a {
@@ -47,7 +58,7 @@ header {
   font-size: 1.5625rem;
   line-height: 1;
   font-weight: 700;
-  color: #fff;
+  color: var(--header-text-color);
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: -0.02em;
@@ -63,6 +74,11 @@ header {
 
 .logo-header > a:hover {
   color: var(--slider-background);
+}
+
+.logo-header > a:active {
+  color: var(--slider-background);
+  background-color: #494e62;
 }
 
 .navbar-header {
@@ -93,7 +109,7 @@ header {
   display: block;
   font-size: 0.75rem;
   font-weight: 700;
-  color: #fff;
+  color: var(--header-text-color);
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: -0.027em;
@@ -101,4 +117,142 @@ header {
 
 .navbar-header__item > a:hover {
   color: var(--slider-background);
+}
+
+.navbar-header__item > a:active {
+  color: var(--slider-background);
+  background-color: #494e62;
+}
+
+/*- slider-section --------------------------------------- */
+
+.section-slider {
+  background-color: var(--slider-background);
+  border-bottom: 6px solid var(--slider-border);
+}
+
+.wrapper-slider {
+  position: relative;
+  max-width: var(--content-width);
+  margin: 0 auto;
+  padding: 3.3125em 2.5em 3.625em 2.5em;
+}
+
+.slider-btn {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 50%;
+  width: 16px;
+  height: 27px;
+  transform: translateY(-50%);
+  border: none;
+  background-color: inherit;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.slider-btn--left {
+  left: 2.5em;
+  background-image: url(./assets/images/slider-btn-left.png);
+}
+
+.slider-btn--right {
+  right: 2.5em;
+  background-image: url(./assets/images/slider-btn-right.png);
+}
+
+.slider-btn:hover {
+  background-color: #ce5d56;
+}
+
+.slider-btn:active {
+  background-color: #ce5d56;
+  background-size: 80%;
+}
+
+.slider-list {
+  padding: 0 2.25em;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+.slider-list__item {
+  padding: 0 2.25em;
+  line-height: 0;
+}
+
+/*- section-services --------------------------------------- */
+
+.section-services {
+  background-color: var(--services-background);
+  border-bottom: 6px solid var(--services-border);
+}
+
+.wrapper-services {
+  max-width: var(--content-width);
+  margin: 0 auto;
+  padding: 4.25em 2.5em 4.125em 2.5em;
+}
+
+.services__title {
+  font-size: 1.875rem;
+  line-height: 1.125rem;
+  font-weight: 900;
+  color: var(--services-title-color);
+  text-transform: capitalize;
+  letter-spacing: -0.005em;
+}
+
+.services__text {
+  margin-top: 1.5em;
+  font-size: 1.125rem;
+  line-height: 1.875rem;
+  font-weight: 300;
+  color: var(--services-text-color);
+  letter-spacing: 0.01em;
+}
+
+.services-list {
+  list-style: none;
+}
+
+.services-list__item {
+  margin: 0;
+  padding: 0;
+}
+
+.services-tile__icon {
+  width: 59px;
+  height: 59px;
+  border-radius: 50%;
+  border: 2px solid var(--services-title-color);
+  /* background-image: url(./assets/images/pen.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%; */
+}
+
+.services-tile__title {
+  font-size: 1.125rem;
+  line-height: 1.125rem;
+  font-weight: 900;
+  color: var(--services-title-color);
+  text-transform: capitalize;
+  letter-spacing: -0.005em;
+}
+
+.services-tile__text {
+  margin-top: 1.5em;
+  font-size: 0.75rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+  color: var(--services-text-color);
+  letter-spacing: 0.01em;
 }
