--- a/singolo1.css
+++ b/singolo1.css
@@ -10,6 +10,10 @@
   --services-border: #fff;
   --services-title-color: #666d89;
   --services-text-color: #767e9e;
+  --portfolio-background: #2d303a;
+  --portfolio-border: #323746;
+  --portfolio-title-color: #666d89;
+  --portfolio-text-color: #767e9e;
 
   --content-width: 1020px;
   
@@ -41,17 +45,32 @@ p {
   padding: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  margin: 0;
+  padding: 0;
+}
+
 /*- header --------------------------------------- */
 
 .header {
+  padding: 2em 0 2em 0;
   background-color: var(--header-background);
   border-bottom: 6px solid var(--header-border);
 }
 
-.wrapper-header {
+.wrapper {
   max-width: var(--content-width);
   margin: 0 auto;
-  padding: 2em 2.5em 2em 2.5em;
+  padding: 0 2.5em;
+}
+
+.header > .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -88,9 +107,6 @@ p {
 
 .navbar-header {
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   justify-content: space-between;
 }
 
@@ -132,15 +148,13 @@ p {
 /*- slider-section --------------------------------------- */
 
 .section-slider {
+  padding: 3.3125em 0 3.625em 0;
   background-color: var(--slider-background);
   border-bottom: 6px solid var(--slider-border);
 }
 
-.wrapper-slider {
+.section-slider > .wrapper {
   position: relative;
-  max-width: var(--content-width);
-  margin: 0 auto;
-  padding: 3.3125em 2.5em 3.625em 2.5em;
 }
 
 .slider-btn {
@@ -181,11 +195,9 @@ p {
 
 .slider-list {
   padding: 0 2.25em;
-  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  list-style: none;
 }
 
 .slider-list__item {
@@ -196,14 +208,9 @@ p {
 /*- section-services --------------------------------------- */
 
 .section-services {
+  padding: 3.9em 0 3.7em 0;
   background-color: var(--services-background);
   border-bottom: 6px solid var(--services-border);
-}
-
-.wrapper-services {
-  max-width: var(--content-width);
-  margin: 0 auto;
-  padding: 3.9em 2.5em 3.7em 2.5em;
 }
 
 .services__title {
@@ -225,13 +232,11 @@ p {
 }
 
 .services-list {
-  padding: 0;
   margin: 1.0em 0.0625em 0 0.0625em;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1.25em;
   grid-template-rows: 1fr 1fr;
-  list-style: none;
 }
 
 .services-list__item {
@@ -300,3 +305,128 @@ p {
 }
 
 /*- section-portfolio --------------------------------------- */
+
+.section-portfolio {
+  padding: 3.9em 0 4.1875em 0;
+  background-color: var(--portfolio-background);
+  border-bottom: 6px solid var(--portfolio-border);
+}
+
+.portfolio__title {
+  font-size: 1.875rem;
+  line-height: 1.875rem;
+  font-weight: 900;
+  color: var(--portfolio-title-color);
+  text-transform: capitalize;
+  letter-spacing: -0.005em;
+}
+
+.portfolio__text {
+  margin-top: 1.175em;
+  font-size: 1.125rem;
+  line-height: 1.875rem;
+  font-weight: 300;
+  color: var(--portfolio-text-color);
+  letter-spacing: 0.0035em;
+}
+
+.images-set-list {
+  display: flex;
+  margin-top: 0.675em;
+}
+
+.images-set-list__item {
+  margin-right: 0.625em;
+}
+
+.images-set-list__item > button {
+  padding: 0 0.375em;
+  display: flex;
+  align-items: center;
+  border-radius: 0.3125em;
+  border: 1px solid var(--portfolio-title-color);
+  background-color: inherit;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  color: var(--portfolio-text-color);
+  letter-spacing: 0.04em;
+  cursor: pointer;
+}
+
+.images-set-list__item > button:hover {
+  border: 1px solid #c5c5c5;
+  color: #dedede;
+}
+
+.images-set-list__item > button:active {
+  border: 1px solid var(--slider-background);
+  color: var(--slider-background);
+}
+
+.images-list {
+  margin-top: 1.1875em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  column-gap: 1.25em;
+  row-gap: 1.25em;
+}
+
+.images-list__item {
+  height: 11.6875em;
+  overflow: hidden;
+}
+
+.images-list__item > img {
+  display: block;
+  object-fit: fill;
+}
+
+.img-01 {
+  transform: translate(-0.5em, -0.7em);
+}
+
+.img-02 {
+  transform: translate(-5.1em, -2.7em);
+}
+
+.img-03 {
+  transform: translate(-0.69em, -0.05em);
+}
+
+.img-04 {
+  transform: translate(-1.5em, -0.15em);
+}
+
+.img-05 {
+  transform: translate(-0.62em, -1em);
+}
+
+.img-06 {
+  transform: translate(-1.0em, -0.25em);
+}
+
+.img-07 {
+  transform: translate(-1.94em, -2.44em);
+}
+
+.img-08 {
+  transform: translate(-1.5em, -2.0em);
+}
+
+.img-09 {
+  transform: translate(-1.0em, -0.13em);
+}
+
+.img-10 {
+  transform: translate(-8.81em, -7.07em);
+}
+
+.img-11 {
+  transform: translate(-9em, -10.93em);
+}
+
+.img-12 {
+  transform: translate(-2.25em, -3.75em);
+}
