--- a/singolo1.css
+++ b/singolo1.css
@@ -4,20 +4,34 @@
   --header-background: #2d303a;
   --header-border: #323746;
   --header-text-color: #fff;
+
   --slider-background: #f06c64;
   --slider-border: #ea676b;
+
   --services-background: #f2f2f2;
   --services-border: #fff;
   --services-title-color: #666d89;
   --services-text-color: #767e9e;
+
   --portfolio-background: #2d303a;
   --portfolio-border: #323746;
   --portfolio-title-color: #666d89;
   --portfolio-text-color: #767e9e;
+
   --aboutUs-background: #f2f2f2;
   --aboutUs-border: #fff;
   --aboutUs-title-color: #666d89;
   --aboutUs-text-color: #767e9e;
+
+  --quote-background: #f06c64;
+  --quote-border: #ea676b;
+  --quote-input-background: #d6564f;
+  --quote-input-text-color: #f48c8f;
+  --quote-title-color: #f0d8d9;
+  --quote-text-color: #f0d8d9;
+
+  --footer-background: #2d303a;
+  --footer-text-color: #666d89;
 
   --content-width: 1020px;
   
@@ -26,9 +40,8 @@
 
 body {
   box-sizing: border-box;
-  background-color: lightslategrey;
-  font-family: 'Lato', sans-serif;
-  font-size: 1rem;
+  background-color: lightslategrey; /*--------------------------*/
+  font-family: 'Lato', Arial, sans-serif;
 }
 
 *,
@@ -109,7 +122,7 @@ a {
 
 .logo-header > a:active {
   color: var(--slider-background);
-  background-color: #494e62;
+  transform: scale(0.9);
 }
 
 .navbar-header {
@@ -149,7 +162,7 @@ a {
 
 .navbar-header__item > a:active {
   color: var(--slider-background);
-  background-color: #494e62;
+  transform: scale(0.9);
 }
 
 /*- slider-section --------------------------------------- */
@@ -192,11 +205,11 @@ a {
 }
 
 .slider-btn:hover {
-  background-color: #ce5d56;
+  filter: brightness(10);
 }
 
 .slider-btn:active {
-  background-color: #ce5d56;
+  filter: brightness(10);
   background-size: 80%;
 }
 
@@ -367,8 +380,9 @@ a {
 }
 
 .images-set-list__item > button:active {
-  border: 1px solid var(--slider-background);
-  color: var(--slider-background);
+  border: 1px solid #c5c5c5;
+  color: #dedede;
+  background-color: var(--slider-background);
 }
 
 .images-list {
@@ -549,4 +563,159 @@ a {
 
 .tab-linkedin {
   background-image: url(./assets/images/linkedin.png);
+}
+
+/*- section-quote --------------------------------------- */
+
+.section-quote {
+  padding: 3.85em 0 4.2em 0;
+  background-color: var(--quote-background);
+  border-bottom: 6px solid var(--quote-border);
+}
+
+.quote__title {
+  font-size: 1.875rem;
+  line-height: 1.875rem;
+  font-weight: 900;
+  color: var(--quote-title-color);
+  text-transform: capitalize;
+  letter-spacing: -0.005em;
+}
+
+.quote__text {
+  margin-top: 1.175em;
+  font-size: 1.125rem;
+  line-height: 1.875rem;
+  font-weight: 300;
+  color: var(--quote-text-color);
+  letter-spacing: 0.0035em;
+  word-spacing: 0.05em;
+}
+
+.flex-2-column {
+  padding-top: 2.7em;
+  display: flex;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__input {
+  padding: 0.5rem 0.9375rem;
+  border-radius: 0.3125rem;
+  border: none;
+  background-color: var(--quote-input-background);
+  font-size: 0.75rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+  color: var(--quote-input-text-color);
+  overflow: hidden;
+}
+
+.form__input + .form__input {
+  margin-top: 1rem;
+}
+
+.form__textarea {
+  padding-right: 1.1rem;
+  padding-bottom: 1.15rem;
+}
+
+.contact-information {
+  padding-left: 1.3125em;
+}
+
+.contact-information > h3 {
+  font-size: 1.125rem;
+  line-height: 1.125rem;
+  font-weight: 900;
+  color: var(--quote-title-color);
+}
+
+.contact-information > p {
+  margin-top: 0.85em;
+  font-size: 0.75rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+  color: var(--quote-text-color);
+  text-align: justify;
+}
+
+.contact-tab-list {
+  padding: 1.3rem 0 0 1.4375rem;
+}
+
+.contact-tab-list a {
+  position: relative;
+  font-size: 0.75rem;
+  line-height: 1.344rem;
+  font-weight: 400;
+  color: var(--quote-text-color);
+  letter-spacing: 0.01em;
+}
+
+.contact-tab-list a::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: -1rem;
+  bottom: 1px;
+  background-size: initial;
+  background-repeat: no-repeat;
+  transform: translateX(-50%);
+}
+
+.location-contact-icon::before {
+  width: 7px;
+  height: 11px;
+  background-image: url(./assets/images/location.png);
+}
+
+.phone-contact-icon::before {
+  width: 11px;
+  height: 11px;
+  background-image: url(./assets/images/phone.png);
+}
+
+.mail-contact-icon::before {
+  width: 13px;
+  height: 8px;
+  background-image: url(./assets/images/mail.png);
+}
+
+.contact-tab-list a:hover {
+  border: 1px solid var(--quote-text-color);
+}
+
+.contact-tab-list a:active {
+  border: 1px solid var(--footer-background);
+  color: var(--footer-background);
+}
+
+/*- footer --------------------------------------- */
+
+.footer {
+  padding: 1.375em 0 1.375em 0;
+  background-color: var(--footer-background);
+}
+
+.footer > .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__text {
+  font-size: 0.75rem;
+  line-height: 2.0rem;
+  vertical-align: middle;
+  font-weight: 400;
+  color: var(--footer-text-color);
+  letter-spacing: -0.01em;
+}
+
+.footer .media-tab-list {
+  margin-top: 0;
 }
