--- a/singolo1.css
+++ b/singolo1.css
@@ -1,37 +1,17 @@
 @import "fonts.css";
 
 :root {
-  --header-background: #2d303a;
-  --header-border: #323746;
-  --header-text-color: #fff;
+  --color-header-background: #2d303a;
+  --color-header-border: #323746;
+  --color-header-text-color: #fff;
 
-  --slider-background: #f06c64;
-  --slider-border: #ea676b;
+  --color-slider-background: #f06c64;
+  --color-slider-border: #ea676b;
 
-  --services-background: #f2f2f2;
-  --services-border: #fff;
-  --services-title-color: #666d89;
-  --services-text-color: #767e9e;
-
-  --portfolio-background: #2d303a;
-  --portfolio-border: #323746;
-  --portfolio-title-color: #666d89;
-  --portfolio-text-color: #767e9e;
-
-  --aboutUs-background: #f2f2f2;
-  --aboutUs-border: #fff;
-  --aboutUs-title-color: #666d89;
-  --aboutUs-text-color: #767e9e;
-
-  --quote-background: #f06c64;
-  --quote-border: #ea676b;
-  --quote-input-background: #d6564f;
-  --quote-input-text-color: #f48c8f;
-  --quote-title-color: #f0d8d9;
-  --quote-text-color: #f0d8d9;
-
-  --footer-background: #2d303a;
-  --footer-text-color: #666d89;
+  --color-services-background: #f2f2f2;
+  --color-services-border: #fff;
+  --color-services-title: #666d89;
+  --color-services-text: #767e9e;
 
   --content-width: 1020px;
   
@@ -39,9 +19,11 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   background-color: lightslategrey; /*--------------------------*/
-  font-family: 'Lato', Arial, sans-serif;
+  font-family: 'Lato', Verdana, sans-serif;
 }
 
 *,
@@ -74,6 +56,7 @@ img {
 a {
   margin: 0;
   padding: 0;
+  color: inherit;
   text-decoration: none;
 }
 
@@ -81,8 +64,8 @@ a {
 
 .header {
   padding: 2em 0 2em 0;
-  background-color: var(--header-background);
-  border-bottom: 6px solid var(--header-border);
+  background-color: var(--color-header-background);
+  border-bottom: 6px solid var(--color-header-border);
 }
 
 .wrapper {
@@ -103,7 +86,7 @@ a {
   font-size: 1.5625rem;
   line-height: 1;
   font-weight: 700;
-  color: var(--header-text-color);
+  color: var(--color-header-text-color);
   text-transform: uppercase;
   letter-spacing: -0.02em;
 }
@@ -113,15 +96,15 @@ a {
   position: absolute;
   top: -1px;
   left: 100%;
-  color: var(--slider-background);
+  color: var(--color-slider-background);
 }
 
 .logo-header > a:hover {
-  color: var(--slider-background);
+  color: var(--color-slider-background);
 }
 
 .logo-header > a:active {
-  color: var(--slider-background);
+  color: var(--color-slider-background);
   transform: scale(0.9);
 }
 
@@ -151,17 +134,17 @@ a {
   font-size: 0.75rem;
   line-height: 0.9375rem;
   font-weight: 700;
-  color: var(--header-text-color);
+  color: var(--color-header-text-color);
   text-transform: uppercase;
   letter-spacing: -0.027em;
 }
 
 .navbar-header__item > a:hover {
-  color: var(--slider-background);
+  color: var(--color-slider-background);
 }
 
 .navbar-header__item > a:active {
-  color: var(--slider-background);
+  color: var(--color-slider-background);
   transform: scale(0.9);
 }
 
@@ -169,8 +152,8 @@ a {
 
 .section-slider {
   padding: 3.3125em 0 3.625em 0;
-  background-color: var(--slider-background);
-  border-bottom: 6px solid var(--slider-border);
+  background-color: var(--color-slider-background);
+  border-bottom: 6px solid var(--color-slider-border);
 }
 
 .section-slider > .wrapper {
@@ -229,15 +212,15 @@ a {
 
 .section-services {
   padding: 3.9em 0 3.7em 0;
-  background-color: var(--services-background);
-  border-bottom: 6px solid var(--services-border);
+  background-color: var(--color-services-background);
+  border-bottom: 6px solid var(--color-services-border);
 }
 
 .services__title {
   font-size: 1.875rem;
   line-height: 1.875rem;
   font-weight: 900;
-  color: var(--services-title-color);
+  color: var(--color-services-title);
   text-transform: capitalize;
   letter-spacing: -0.005em;
 }
@@ -247,7 +230,7 @@ a {
   font-size: 1.125rem;
   line-height: 1.875rem;
   font-weight: 300;
-  color: var(--services-text-color);
+  color: var(--color-services-text);
   letter-spacing: 0.01em;
 }
 
@@ -271,7 +254,7 @@ a {
   height: 59px;
   margin: 0.125em 1.25em 0 0;
   border-radius: 50%;
-  border: 2px solid var(--services-title-color);
+  border: 2px solid var(--color-services-title);
   background-position: center;
   background-repeat: no-repeat;
   background-size: initial;
@@ -309,7 +292,7 @@ a {
   font-size: 1.125rem;
   line-height: 1.125rem;
   font-weight: 900;
-  color: var(--services-title-color);
+  color: var(--color-services-title);
   text-transform: capitalize;
   letter-spacing: 0.001em;
 }
@@ -319,403 +302,7 @@ a {
   font-size: 0.75rem;
   line-height: 1.375rem;
   font-weight: 400;
-  color: var(--services-text-color);
+  color: var(--color-services-text);
   text-align: justify;
   letter-spacing: 0.01em;
-}
-
-/*- section-portfolio --------------------------------------- */
-
-.section-portfolio {
-  padding: 3.9em 0 4.1875em 0;
-  background-color: var(--portfolio-background);
-  border-bottom: 6px solid var(--portfolio-border);
-}
-
-.portfolio__title {
-  font-size: 1.875rem;
-  line-height: 1.875rem;
-  font-weight: 900;
-  color: var(--portfolio-title-color);
-  text-transform: capitalize;
-  letter-spacing: -0.005em;
-}
-
-.portfolio__text {
-  margin-top: 1.175em;
-  font-size: 1.125rem;
-  line-height: 1.875rem;
-  font-weight: 300;
-  color: var(--portfolio-text-color);
-  letter-spacing: 0.0035em;
-}
-
-.images-set-list {
-  display: flex;
-  margin-top: 0.675em;
-}
-
-.images-set-list__item {
-  margin-right: 0.625em;
-}
-
-.images-set-list__item > button {
-  padding: 0 0.375em;
-  display: flex;
-  align-items: center;
-  border-radius: 0.3125em;
-  border: 1px solid var(--portfolio-title-color);
-  background-color: inherit;
-  font-size: 0.75rem;
-  line-height: 1.25rem;
-  font-weight: 400;
-  color: var(--portfolio-text-color);
-  letter-spacing: 0.04em;
-  cursor: pointer;
-}
-
-.images-set-list__item > button:hover {
-  border: 1px solid #c5c5c5;
-  color: #dedede;
-}
-
-.images-set-list__item > button:active {
-  border: 1px solid #c5c5c5;
-  color: #dedede;
-  background-color: var(--slider-background);
-}
-
-.images-list {
-  margin-top: 1.1875em;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  column-gap: 1.25em;
-  row-gap: 1.25em;
-}
-
-.images-list__item {
-  height: 11.6875em;
-  overflow: hidden;
-}
-
-.images-list__item > img {
-  display: block;
-  object-fit: fill;
-}
-
-.img-01 {
-  transform: translate(-0.5em, -0.7em);
-}
-
-.img-02 {
-  transform: translate(-5.1em, -2.7em);
-}
-
-.img-03 {
-  transform: translate(-0.69em, -0.05em);
-}
-
-.img-04 {
-  transform: translate(-1.5em, -0.15em);
-}
-
-.img-05 {
-  transform: translate(-0.62em, -1em);
-}
-
-.img-06 {
-  transform: translate(-1.0em, -0.25em);
-}
-
-.img-07 {
-  transform: translate(-1.94em, -2.44em);
-}
-
-.img-08 {
-  transform: translate(-1.5em, -2.0em);
-}
-
-.img-09 {
-  transform: translate(-1.0em, -0.13em);
-}
-
-.img-10 {
-  transform: translate(-8.81em, -7.07em);
-}
-
-.img-11 {
-  transform: translate(-9em, -10.93em);
-}
-
-.img-12 {
-  transform: translate(-2.25em, -3.75em);
-}
-
-/*- section-aboutUs --------------------------------------- */
-
-.section-aboutUs {
-  padding: 3.85em 0 4.275em 0;
-  background-color: var(--aboutUs-background);
-  border-bottom: 6px solid var(--aboutUs-border);
-}
-
-.aboutUs__title {
-  font-size: 1.875rem;
-  line-height: 1.875rem;
-  font-weight: 900;
-  color: var(--aboutUs-title-color);
-  text-transform: capitalize;
-  letter-spacing: -0.005em;
-}
-
-.aboutUs__text {
-  margin-top: 1.175em;
-  font-size: 1.125rem;
-  line-height: 1.875rem;
-  font-weight: 300;
-  color: var(--aboutUs-text-color);
-  letter-spacing: 0.0035em;
-  word-spacing: 0.05em;
-}
-
-.employees-list {
-  margin-top: 2.8em;
-  display: flex;
-  justify-content: space-between;
-}
-
-.employees-list__item {
-  width: 300px; /* -------------------------------------- */
-  display: flex;
-  flex-direction: column;
-}
-
-.employees-list__item + .employees-list__item {
-  margin-left: 1.25em;
-}
-
-.employees-list__item > img {
-  width: 100%;
-  height: auto;
-}
-
-.employees-list__item > h3 {
-  margin-top: 0.9em;
-  font-size: 1.125rem;
-  line-height: 1.125rem;
-  font-weight: 900;
-  color: var(--aboutUs-title-color);
-  letter-spacing: -0.0075em;
-}
-
-.employees-list__item > p {
-  margin-top: 0.85em;
-  font-size: 0.75rem;
-  line-height: 1.35rem;
-  font-weight: 400;
-  color: var(--aboutUs-text-color);
-  text-align: justify;
-  letter-spacing: -0.01em;
-  word-spacing: -0.01em;
-}
-
-.media-tab-list {
-  display: flex;
-  margin-top: 1.5em;
-}
-
-.media-tab-list__item + .media-tab-list__item {
-  margin-left: 0.5em;
-}
-
-.media-tab-list__item > a {
-  display: block;
-  width: 2em;
-  height: 2em;
-  border-radius: 50%;
-  border: 1px solid var(--aboutUs-title-color);
-  background-position: center;
-  background-size: initial;
-  background-repeat: no-repeat;
-}
-
-.media-tab-list__item > a:hover {
-  border: 2px solid var(--slider-border);
-}
-
-.media-tab-list__item > a:active {
-  border: 2px solid var(--slider-border);
-  background-color: var(--slider-background);
-}
-
-.tab-facebook {
-  background-image: url(./assets/images/facebook.png);
-}
-
-.tab-google {
-  background-image: url(./assets/images/google+.png);
-}
-
-.tab-twitter {
-  background-image: url(./assets/images/twitter.png);
-}
-
-.tab-linkedin {
-  background-image: url(./assets/images/linkedin.png);
-}
-
-/*- section-quote --------------------------------------- */
-
-.section-quote {
-  padding: 3.85em 0 4.2em 0;
-  background-color: var(--quote-background);
-  border-bottom: 6px solid var(--quote-border);
-}
-
-.quote__title {
-  font-size: 1.875rem;
-  line-height: 1.875rem;
-  font-weight: 900;
-  color: var(--quote-title-color);
-  text-transform: capitalize;
-  letter-spacing: -0.005em;
-}
-
-.quote__text {
-  margin-top: 1.175em;
-  font-size: 1.125rem;
-  line-height: 1.875rem;
-  font-weight: 300;
-  color: var(--quote-text-color);
-  letter-spacing: 0.0035em;
-  word-spacing: 0.05em;
-}
-
-.flex-2-column {
-  padding-top: 2.7em;
-  display: flex;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-}
-
-.form__input {
-  padding: 0.5rem 0.9375rem;
-  border-radius: 0.3125rem;
-  border: none;
-  background-color: var(--quote-input-background);
-  font-size: 0.75rem;
-  line-height: 1.375rem;
-  font-weight: 400;
-  color: var(--quote-input-text-color);
-  overflow: hidden;
-}
-
-.form__input + .form__input {
-  margin-top: 1rem;
-}
-
-.form__textarea {
-  padding-right: 1.1rem;
-  padding-bottom: 1.15rem;
-}
-
-.contact-information {
-  padding-left: 1.3125em;
-}
-
-.contact-information > h3 {
-  font-size: 1.125rem;
-  line-height: 1.125rem;
-  font-weight: 900;
-  color: var(--quote-title-color);
-}
-
-.contact-information > p {
-  margin-top: 0.85em;
-  font-size: 0.75rem;
-  line-height: 1.375rem;
-  font-weight: 400;
-  color: var(--quote-text-color);
-  text-align: justify;
-}
-
-.contact-tab-list {
-  padding: 1.3rem 0 0 1.4375rem;
-}
-
-.contact-tab-list a {
-  position: relative;
-  font-size: 0.75rem;
-  line-height: 1.344rem;
-  font-weight: 400;
-  color: var(--quote-text-color);
-  letter-spacing: 0.01em;
-}
-
-.contact-tab-list a::before {
-  content: '';
-  display: block;
-  position: absolute;
-  left: -1rem;
-  bottom: 1px;
-  background-size: initial;
-  background-repeat: no-repeat;
-  transform: translateX(-50%);
-}
-
-.location-contact-icon::before {
-  width: 7px;
-  height: 11px;
-  background-image: url(./assets/images/location.png);
-}
-
-.phone-contact-icon::before {
-  width: 11px;
-  height: 11px;
-  background-image: url(./assets/images/phone.png);
-}
-
-.mail-contact-icon::before {
-  width: 13px;
-  height: 8px;
-  background-image: url(./assets/images/mail.png);
-}
-
-.contact-tab-list a:hover {
-  border: 1px solid var(--quote-text-color);
-}
-
-.contact-tab-list a:active {
-  border: 1px solid var(--footer-background);
-  color: var(--footer-background);
-}
-
-/*- footer --------------------------------------- */
-
-.footer {
-  padding: 1.375em 0 1.375em 0;
-  background-color: var(--footer-background);
-}
-
-.footer > .wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer__text {
-  font-size: 0.75rem;
-  line-height: 2.0rem;
-  vertical-align: middle;
-  font-weight: 400;
-  color: var(--footer-text-color);
-  letter-spacing: -0.01em;
-}
-
-.footer .media-tab-list {
-  margin-top: 0;
 }
