--- a/singolo1.css
+++ b/singolo1.css
@@ -32,7 +32,47 @@ body {
   box-sizing: inherit;
 }
 
-h1, h2, h3, h4 {
+h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.5625rem;
+  line-height: 1;
+  font-weight: 700;
+  color: var(--color-header-text-color);
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+}
+
+.button {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: inherit;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+}
+
+h2, h3, h4 {
   margin: 0;
   padding: 0;
 }
@@ -42,22 +82,9 @@ p {
   padding: 0;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
 img {
   margin: 0;
   padding: 0;
-}
-
-a {
-  margin: 0;
-  padding: 0;
-  color: inherit;
-  text-decoration: none;
 }
 
 /*- header --------------------------------------- */
@@ -74,130 +101,117 @@ a {
   padding: 0 2.5em;
 }
 
-.header > .wrapper {
+.wrapper.header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
 }
 
-.logo-header > a {
-  position: relative;
+.logo {
   display: block;
-  font-size: 1.5625rem;
-  line-height: 1;
-  font-weight: 700;
-  color: var(--color-header-text-color);
-  text-transform: uppercase;
-  letter-spacing: -0.02em;
+  position: relative;
 }
 
-.logo-header > a::after {
+.logo::after {
   content: "*";
   position: absolute;
-  top: -1px;
+  top: 0;
   left: 100%;
   color: var(--color-slider-background);
 }
 
-.logo-header > a:hover {
-  color: var(--color-slider-background);
-}
-
-.logo-header > a:active {
-  color: var(--color-slider-background);
-  transform: scale(0.9);
-}
-
-.navbar-header {
+.navbar {
   display: flex;
   justify-content: space-between;
 }
 
-.navbar-header__item + .navbar-header__item {
+.navbar__item + .navbar__item {
   position: relative;
-  margin-left: 1.875em;  
+  margin-left: 1.875em;
 }
 
-.navbar-header__item + .navbar-header__item::before {
+.navbar__item + .navbar__item::before {
   content: "";
   position: absolute;
   left: -1em;
   top: 50%;
   width: 3px;
   height: 3px;
+  transform: translateY(-50%);
   border-radius: 50%;
   background-color: #494e62;
 }
 
-.navbar-header__item > a {
+.navbar__item > a {
   display: block;
   font-size: 0.75rem;
-  line-height: 0.9375rem;
+  line-height: 1.3;
   font-weight: 700;
   color: var(--color-header-text-color);
   text-transform: uppercase;
-  letter-spacing: -0.027em;
+  letter-spacing: -0.0275em;
 }
 
-.navbar-header__item > a:hover {
+.navbar__item.navbar__item--active > a {
   color: var(--color-slider-background);
 }
 
-.navbar-header__item > a:active {
+.navbar__item > a:hover {
+  transform: scale(1.2);
+}
+
+.navbar__item > a:active {
   color: var(--color-slider-background);
-  transform: scale(0.9);
 }
 
 /*- slider-section --------------------------------------- */
 
-.section-slider {
+.slider {
   padding: 3.3125em 0 3.625em 0;
   background-color: var(--color-slider-background);
   border-bottom: 6px solid var(--color-slider-border);
 }
 
-.section-slider > .wrapper {
+.slider__wrapper {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.slider-btn {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  top: 50%;
+.slider__button {
+  --slider-btn-height: 27px;
   width: 16px;
-  height: 27px;
-  transform: translateY(-50%);
-  border: none;
-  background-color: inherit;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  cursor: pointer;
+  height: var(--slider-btn-height);
+  position: absolute;
+  top: calc(50% - var(--slider-btn-height) / 2);
+  background-image: url(./assets/images/slider-btn-left.png);
   z-index: 10;
 }
 
-.slider-btn--left {
-  left: 2.5em;
-  background-image: url(./assets/images/slider-btn-left.png);
+.slider__button--left {
+  left: 0;
 }
 
-.slider-btn--right {
-  right: 2.5em;
-  background-image: url(./assets/images/slider-btn-right.png);
+.slider__button--perfectPixel {
+  left: 2px;
 }
 
-.slider-btn:hover {
+.button.slider__button--right {
+  right: 0;
+  transform: rotate(180deg);
+}
+
+.slider__button:hover {
   filter: brightness(10);
 }
 
-.slider-btn:active {
+.slider__button:active {
   filter: brightness(10);
   background-size: 80%;
 }
 
 .slider-list {
-  padding: 0 2.25em;
   display: flex;
   justify-content: space-between;
   align-items: center;
