--- a/singolo1.css
+++ b/singolo1.css
@@ -49,6 +49,9 @@ h2 {
   line-height: 1;
   font-weight: 900;
   text-transform: capitalize;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 h3 {
@@ -58,12 +61,16 @@ h3 {
   line-height: 1;
   font-weight: 900;
   text-transform: capitalize;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 p {
   margin: 0;
   padding: 0;
   text-align: justify;
+  overflow: hidden;
 }
 
 .button {
@@ -237,6 +244,76 @@ img {
   line-height: 0;
 }
 
+.iphone-vertical {
+  height: 483px;
+  width: 240px;
+  position: relative;
+}
+
+.iphone__shadow {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.iphone__base {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.iphone__screen {
+  box-sizing: content-box;
+  height: 333px;
+  width: 188px;
+  position: absolute;
+  top: 62px;
+  left: 11px;
+  border: 3px solid #c6c6c6;
+  border-radius: 3px;
+  object-fit: none;
+  object-position: -14px -135px;
+  z-index: 20;
+}
+
+.iphone-horizontal {
+  height: 240px;
+  width: 484px;
+  position: relative;
+}
+
+.iphone-horizontal > .iphone__shadow {
+  position: absolute;
+  left: calc(50% + 2px);
+  top: calc(-100% - 2px);
+  transform-origin: left 50%;
+  transform: rotateY(180deg) rotateZ(90deg);
+}
+
+.iphone-horizontal > .iphone__base {
+  position: absolute;
+  left: calc(50% - 12px);
+  top: calc(-100% + 10px);
+  transform-origin: left 50%;
+  transform: rotateZ(90deg);
+  z-index: 10;
+}
+
+.iphone-horizontal > .iphone__screen {
+  box-sizing: content-box;
+  width: 333px;
+  height: 188px;
+  position: absolute;
+  top: 10px;
+  left: 58px;
+  border: 3px solid #c6c6c6;
+  border-radius: 3px;
+  object-fit: none;
+  object-position: -125px -119px;
+  z-index: 20;
+}
+
 /*- section-services --------------------------------------- */
 
 .services {
@@ -333,10 +410,11 @@ img {
 
 .services-tile__title {
   color: var(--color-services-title);
-  letter-spacing: 0.001em;
+  letter-spacing: 0.001em;  
 }
 
 .services-tile__text {
+  max-height: 6.25em;
   padding-top: 0.75em;
   font-size: 0.75rem;
   line-height: 1.84;
